modified `_data/navigation.yml`,`_includes/masthead.html`,`_pages/about.md` to retain hiking section

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Zhou Rui, Zack"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "The University of Hong Kong"
+  bio              : # "The University of Hong Kong"
   location         : "Hong Kong"
   employer         :
   pubmed           : 
@@ -43,9 +43,9 @@ author:
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "rui-z-292ab3193"
+  linkedin         : # "rui-z-292ab3193"
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
-  orcid            : "https://orcid.org/0009-0002-3229-0324"
+  orcid            : # "https://orcid.org/0009-0002-3229-0324"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
