--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
-  - title: "About Me"
-    url: "/#about-me"
+  # - title: "About Me"
+  #   url: "/#about-me"
 
-  - title: "Publications"
-    url: "/#publications"
+  # - title: "Publications"
+  #   url: "/#publications"
 
-  - title: "Projects"
-    url: "/#projects"
+  # - title: "Projects"
+  #   url: "/#projects"
 
-  - title: "Honors and Awards"
-    url: "/#honors-and-awards"
+  # - title: "Honors and Awards"
+  #   url: "/#honors-and-awards"
 
-  - title: "Education"
-    url: "/#education"
+  # - title: "Education"
+  #   url: "/#education"
 
-  - title: "Internships"
-    url: "/#internships"
+  # - title: "Internships"
+  #   url: "/#internships"
 
   - title: "Hiking"
     url: "/#hiking"
