retain hiking section

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site Settings
 title                    : "Zhou Rui, Zack"
-description              : "PhD at HKU IoT Lab. Focusing on federated learning."
-repository               : "zackeryzhou/zackeryzhou.github.io"
+description              : "" #"PhD at HKU IoT Lab. Focusing on federated learning."
+repository               : #"zackeryzhou/zackeryzhou.github.io"
 # google_scholar_stats_use_cdn : true             # commented `_includes/fetch_google_scholar_stats.html`, hence stopped google_scholar_crawler
 
 # google analytics
