--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -41,10 +41,10 @@ jobs:
       #     cache-version: 0 # Increment this number if you need to re-download cached gems
       - name: Set up Ruby
         run: |
-          sudo apt-get update
-          sudo apt-get install -y git libssl-dev libreadline-dev zlib1g-dev
+          apt-get update
+          apt-get install -y git libssl-dev libreadline-dev zlib1g-dev
           git clone https://github.com/rbenv/ruby-build.git ~/.ruby-build
-          sudo ~/.ruby-build/install.sh
+          ~/.ruby-build/install.sh
           ruby-build 3.1.4 /opt/hostedtoolcache/Ruby/3.1.4/x64
           touch /opt/hostedtoolcache/Ruby/3.1.4/x64.complete
         env:
